# ComfyUI-LayerDivider

./: .gitignore  README.md  README_ZH_CN.md  __init__.py  install_conda_win_py311_cu121.bat  install_windows_portable_win_py311_cu121.bat  layer_divider_node.py  pyproject.toml  requirements.txt  requirements_post_win_py311_cu121.txt
.github/workflows/: publish.yml
_Pre_Builds/_Wheels_win_py311_cu121/: pytoshop-1.2.1-cp311-cp311-win_amd64.whl
ldivider/: bg_remover.py  ld_convertor.py  ld_processor.py  ld_segment.py  ld_utils.py
scripts/: main.py
workflows/: layerdivider-color-base.json  layerdivider-seg-mask-workflow.json
